--- a/src/components/CourseSlider/style.scss
+++ b/src/components/CourseSlider/style.scss
@@ -2,12 +2,12 @@
 
 .courses-section {
   text-align: center;
-  margin: 64px 0;
+  margin-bottom: 64px;
 
   &__title {
     font-size: 24px;
     font-weight: 800;
-    color: $c-gray-40;
+    color: $c-black;
     margin-bottom: 32px;
   }
 
