--- a/src/components/HowItWorks/style.scss
+++ b/src/components/HowItWorks/style.scss
@@ -1,45 +1,66 @@
 @import '/src/theme/main.scss';
-.my-card-title {
-  padding: 16px;
-  size: 2rem;
-  color: indianred;
-  font: iranyekan;
+
+.why-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-}
-.my-card-content {
-    padding: 16px;
-    size: 1rem;
-    color: slateblue;
-    font: iranyekan;
-    text-align: center;
+  margin-bottom: 64px;
+
+  &__title {
+    font-size: 24px;
+    font-weight: 800;
+    color: $c-black;
+    padding: 8px;
+    margin-bottom: 16px;
   }
-.my-card {
-    padding: 16px;
-    height: 380px;
-    width: 350px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    background-color:rgb(248, 229, 218);
-    box-shadow: rgba(250, 70, 25, 0.5) 0px 2px 10px;
-    &:hover {
-      transform: scale(1.1);
-  };
-  &__media{
-    padding: 16px;
-    width: 80%;
-    text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  };
-};
+
+  &__highlight {
+    color: #ff979d;
+  }
+}
+
 .appbarWrapper {
-    width: '80%';
-    display: flex;
-    margin: '0 auto';
+  width: '80%';
+  display: flex;
+  text-align: center;
+  @media (max-width: 600px) {
+    flex-direction: column;
+  }
+}
+
+.why-card {
+  padding: 16px;
+  width: 350px;
+  display: block;
+  margin: 16px;
+  border-radius: 5%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 10px;
+  &:hover {
+    transform: scale(1.1);
+  }
+  &__img {
+    padding: 16px;
+    width: 85%;
     text-align: center;
-    @media (max-width: 600px) {
-      flex-direction: column;
-    }
-  };
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  &__title {
+    padding: ۸px;
+    font-size: larger;
+    color: indianred;
+    text-align: center;
+    font-weight: bolder;
+  }
+  &__content {
+    padding: 16px;
+    font-size: medium;
+    font-weight: bold;
+    text-align: center;
+    bottom: 30px;
+  }
+}
