--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,88 +1,76 @@
 @import '/src/theme/main.scss';
-@keyframes beat{
-	to { transform: scale(1.4); }
+@keyframes beat {
+  to {
+    transform: scale(1.4);
+  }
 }
 .my-footer {
-    padding: 5px;
-    text-align:left;
-    bottom: 0%;
-    width: 25%;
-    display: block;
-    @media (max-width: 600px) {
-      width: 80%;
-    }
-  &__phoneNum{
-    font-size: medium;
-    font-weight: bold;
-  }
-  &__media{
-    padding: 20px;
-    width: 60%;
-    text-align:center;
-  };
-  &__bylove {
-    padding: 5px;
-      text-align:left;
-  };
-  &__content{
-    padding: 16px;
-    font-size: large;
-    font-weight: bold;
-    color: rgb(18, 3, 117);
-    font: iranyekan;
-    text-align:center;
-    bottom: 30px;
-    &__s{
-      bottom: auto;
-      float: left;
-      padding: 16px;
-      font-size: medium;
-      font-weight: bold;
-      color: rgb(18, 3, 117);
-      font: iranyekan;
-      text-align:center;
-      display: inline;
-    }
-    &__h
-    {color: rgb(231, 3, 3);
-      bottom: auto;
-      font-size: x-large;
-      float:left;
-      animation: beat 0.25s infinite alternate;
-      display: inline;
-    };
-  }
-};
-.my-social {
   padding: 5px;
-  text-align:left;
-  height: 300px;
+  text-align: left;
   bottom: 0%;
-  width: 45%;
-  display: block;
+  width: 25%;
+  color: #fff;
   @media (max-width: 600px) {
     width: 80%;
   }
-  &__Icon{
-    float: left;
-    width: 15%;
-    padding: 5px;
-    &:hover {
-      transform: scale(1.15); 
-    };
-};
-};
-.appbarWrapperforfooter {
-    width: '80%';
-    display: flex;
-    position: static;
-    bottom: '0 auto';
-    margin: '0 auto';
+  &__phoneNum {
+    font-size: medium;
+    font-weight: bold;
+  }
+  &__media {
+    padding: 20px;
+    width: 60%;
     text-align: center;
-    background-color:rgb(197, 136, 247);
-    box-shadow: rgba(80, 0, 100, 0.5) 0px 2px 10px;
-    @media (max-width: 600px) {
-      flex-direction: column;
+  }
+  &__bylove {
+    padding: 5px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-weight: 700;
+  }
+  &__content {
+    padding: 32px;
+    font-size: 20px;
+    font-weight: 800;
+    text-align: center;
+    bottom: 30px;
+    &__s {
+      bottom: auto;
+      font-size: medium;
+      font-weight: bold;
+      text-align: center;
     }
-};
-
+    &__h {
+      color: rgb(231, 3, 3);
+      padding: 8px;
+      bottom: auto;
+      font-size: x-large;
+      animation: beat 0.25s infinite alternate;
+    }
+  }
+}
+.my-social {
+  padding: 32px;
+  color: #fff;
+  @media (max-width: 600px) {
+    width: 80%;
+  }
+  &__Icon {
+    width: 64px;
+    padding: 8px;
+    &:hover {
+      transform: scale(1.15);
+    }
+  }
+}
+.appbarWrapperforfooter {
+  overflow: hidden;
+  width: '100%';
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  box-shadow: rgba(80, 0, 100, 0.5) 0px 2px 10px;
+}
