--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -1,1 +1,17 @@
 @import '/src/theme/main.scss';
+
+.header_search {
+  font-family: 'iranyekan';
+  margin-top: 50px;
+
+  /* overlay styles, all needed */
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+  }
+}
