--- a/src/components/SignupPage/style.scss
+++ b/src/components/SignupPage/style.scss
@@ -1,30 +1,7 @@
 @import '/src/theme/main.scss';
 
 
-.signup{
-   
-}
-
-.textfield
-{
-    font-family: iranyekan;
-    color: red;
-}
-
-.recaptcha 
-{
-    margin:10px 0 0 0 ;
-
-}
-
-.account-type
-{
-    margin: 16px 0 0 0 ;
-    
-    &__item
-    {
-        margin: 0 10px;
-        
-        
-    }
+.responsive {
+    width: 100%;
+    height: auto;
 }
