[feat] add basic view of email-verification (without logic)

--- a/src/components/LoginPage/style.scss
+++ b/src/components/LoginPage/style.scss
@@ -1,1 +1,13 @@
 @import '/src/theme/main.scss';
+
+.test{
+    padding:10px;
+    margin: 10px auto;
+    border-color: blue;
+}
+
+.responsive {
+    width: 90%;
+    height: auto;
+    margin: auto;
+}
