--- a/src/components/NotFoundPage/style.scss
+++ b/src/components/NotFoundPage/style.scss
@@ -1,1 +1,55 @@
 @import '/src/theme/main.scss';
+.back{
+    margin-top: 0px;
+    width: 100%;
+    height: auto;
+    background-color: rgb(164, 182, 199);
+    position: absolute;
+}
+.NotF{
+    position: relative;
+    width: 60%;
+    border-radius: 4%;
+    background-color: rgb(198, 245, 242);
+    margin: 16px;
+    text-align: center;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 70%;
+    box-shadow: rgba(1, 21, 22, 0.5) 0px 2px 10px;
+    @media (max-width: 600px) {
+        width: 80%;
+        height: 50%;
+      }
+    &__Media{
+        border-radius: 4%;
+        margin-top: 25px;
+        width: 93%;
+        text-align: center;
+        box-shadow: rgba(1, 21, 22, 0.5) 0px 2px 10px;
+        @media (max-width: 600px) {
+            width: 85%;
+          }
+    }
+    &__Content{
+        font-weight: 700;
+        text-align: center;
+        padding: 35px;
+        color: rgb(46, 48, 78);
+        @media (max-width: 600px) {
+            font-weight: 400;
+          }
+    }
+}
+.ComebackHome{
+    font-weight: 700;
+    font-size: large;
+    text-align: left;
+    margin: 16px;
+    margin-bottom: 20px;
+    &__Media{
+        width: 200px;
+        text-align: left;
+    }
+}
