--- a/src/components/EmailVerification/style.scss
+++ b/src/components/EmailVerification/style.scss
@@ -28,3 +28,9 @@
     border: 1px solid white;
     color:rgb(163, 216, 165);
   }
+
+  .Toastify__toast--error {
+
+    background: rgb(161, 49, 83) !important;
+  
+  }
