--- a/src/components/NotFoundPage/style.scss
+++ b/src/components/NotFoundPage/style.scss
@@ -46,10 +46,11 @@
     font-weight: 700;
     font-size: large;
     text-align: left;
-    margin: 16px;
-    margin-bottom: 20px;
+    margin: 30px;
+    margin-bottom: 30px;
     &__Media{
         width: 200px;
+        margin-left: -40px;
         text-align: left;
     }
 }
