--- a/src/components/HomeHeader/style.scss
+++ b/src/components/HomeHeader/style.scss
@@ -9,7 +9,7 @@
   align-items: center;
   color: #fff;
   text-align: center;
-  margin-bottom: 64px;
+  margin-bottom: 96px;
 
   &__img {
     width: 100%;
@@ -28,6 +28,7 @@
   &__description {
     font-size: 24px;
     font-weight: 700;
+    padding: 0 24px;
     color: #e9e6dc;
   }
 
