--- a/src/components/NotFoundPage/style.scss
+++ b/src/components/NotFoundPage/style.scss
@@ -1,56 +1,50 @@
 @import '/src/theme/main.scss';
-.back{
-    margin-top: 0px;
-    width: 100%;
-    height: auto;
-    background-color: rgb(164, 182, 199);
-    position: absolute;
+.back {
+  width: 100%;
+  background-color: rgb(164, 182, 199);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
-.NotF{
-    position: relative;
-    width: 60%;
+.NotF {
+  border-radius: 4%;
+  background-color: rgb(198, 245, 242);
+  margin: 16px;
+  text-align: center;
+  width: 70%;
+  box-shadow: rgba(1, 21, 22, 0.5) 0px 2px 10px;
+  @media (max-width: 600px) {
+    width: 80%;
+    height: 50%;
+  }
+  &__Media {
     border-radius: 4%;
-    background-color: rgb(198, 245, 242);
-    margin: 16px;
+    margin-top: 25px;
+    width: 93%;
     text-align: center;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 70%;
     box-shadow: rgba(1, 21, 22, 0.5) 0px 2px 10px;
     @media (max-width: 600px) {
-        width: 80%;
-        height: 50%;
-      }
-    &__Media{
-        border-radius: 4%;
-        margin-top: 25px;
-        width: 93%;
-        text-align: center;
-        box-shadow: rgba(1, 21, 22, 0.5) 0px 2px 10px;
-        @media (max-width: 600px) {
-            width: 85%;
-          }
+      width: 85%;
     }
-    &__Content{
-        font-weight: 700;
-        text-align: center;
-        padding: 35px;
-        color: rgb(46, 48, 78);
-        @media (max-width: 600px) {
-            font-weight: 400;
-          }
-    }
-}
-.ComebackHome{
+  }
+  &__Content {
     font-weight: 700;
-    font-size: large;
-    text-align: left;
-    margin: 30px;
-    margin-bottom: 30px;
-    &__Media{
-        width: 200px;
-        margin-left: -40px;
-        text-align: left;
+    text-align: center;
+    padding: 35px;
+    color: rgb(46, 48, 78);
+    @media (max-width: 600px) {
+      font-weight: 400;
     }
+  }
+}
+.ComebackHome {
+  align-self: flex-end;
+  font-weight: 700;
+  font-size: large;
+  margin: 30px;
+  &__Media {
+    width: 200px;
+  }
 }
