[fix]fix some design bugs

--- a/src/components/LoginPage/style.scss
+++ b/src/components/LoginPage/style.scss
@@ -74,3 +74,11 @@
     }
   }
 }
+
+.login-link__not-registered {
+  text-decoration: none !important;
+}
+
+.login-link__forget-password {
+  text-decoration: none !important;
+}
