--- a/src/components/ForgetPasswordPage/style.scss
+++ b/src/components/ForgetPasswordPage/style.scss
@@ -1,8 +1,8 @@
 @import '/src/theme/main.scss';
 
-@media only screen and (max-width: 600px) {
-  .forget-password__text {
-    font-size: 0.9em !important;
-    font-weight: 500;
-  }
-}
+// @media only screen and (max-width: 600px) {
+//   .forget-password__text {
+//     font-size: 0.9em !important;
+//     font-weight: 500;
+//   }
+// }
