[feat]: Add forget password api and some small style changes

--- a/src/components/ForgetPasswordPage/style.scss
+++ b/src/components/ForgetPasswordPage/style.scss
@@ -6,3 +6,10 @@
 //     font-weight: 500;
 //   }
 // }
+.forget-password-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: justify;
+}
