--- a/src/components/SignupPage/style.scss
+++ b/src/components/SignupPage/style.scss
@@ -9,6 +9,12 @@
 
 .Toastify__toast--error {
 
-    background: rgb(20, 19, 19) !important;
+    background: rgb(49, 3, 102) !important;
+  
+  }
+
+  .Toastify__toast--success {
+
+    background: rgb(4, 61, 61) !important;
   
   }
