--- a/src/components/ForgetPasswordPage/style.scss
+++ b/src/components/ForgetPasswordPage/style.scss
@@ -1,15 +1,17 @@
 @import '/src/theme/main.scss';
 
-// @media only screen and (max-width: 600px) {
-//   .forget-password__text {
-//     font-size: 0.9em !important;
-//     font-weight: 500;
-//   }
-// }
 .forget-password-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   text-align: justify;
+}
+
+.forget-password-page-button {
+  background-color: rgb(99, 36, 200) !important;
+}
+
+.forget-password-avatar {
+  background-color: rgb(99, 36, 200) !important;
 }
