[fix] fix loading button view for login and signup

--- a/src/components/ForgetPasswordPage/style.scss
+++ b/src/components/ForgetPasswordPage/style.scss
@@ -13,3 +13,11 @@
   height: 100vh;
   text-align: justify;
 }
+
+.loading-forget-password{
+  height: 30px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
