--- a/src/components/LoginPage/style.scss
+++ b/src/components/LoginPage/style.scss
@@ -82,3 +82,11 @@
 .login-link__forget-password {
   text-decoration: none !important;
 }
+
+.loading-login{
+  height: 30px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
