--- a/src/components/SignupPage/style.scss
+++ b/src/components/SignupPage/style.scss
@@ -18,3 +18,10 @@
     background: rgb(4, 61, 61) !important;
   
   }
+
+  .loading-signup{
+    height: 30px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
