[fix]: some small styles and spell changes

--- a/src/components/EmailVerification/style.scss
+++ b/src/components/EmailVerification/style.scss
@@ -48,8 +48,8 @@
   background-color: rgb(99, 36, 200) !important;
 
   &:disabled {
-    background-color: rgb(124, 94, 173) !important;
+    background-color: #ddd !important;
 
-    color: rgb(185, 182, 182) !important;
+    color: #888 !important;
   }
 }
