--- a/src/components/LoginPage/style.scss
+++ b/src/components/LoginPage/style.scss
@@ -37,13 +37,13 @@
 }
 
 .Toastify__toast--success {
+  color: #fff !important;
   background: rgb(4, 61, 61) !important;
 }
 
-.loading-login{
+.loading-login {
   height: 30px !important;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
