[chore] change appbar of base dashboard

--- a/src/components/BaseDashboard/style.scss
+++ b/src/components/BaseDashboard/style.scss
@@ -13,5 +13,5 @@
     align-items: center;
     margin: 20px auto 5px auto !important;
     padding: 5px 1vmin 15px 1vmin;
-
+    color: rgba(123, 234, 242, 0.857);
 }
