--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -32,11 +32,14 @@
     font-weight: 700;
   }
   &__content {
-    padding: 32px;
+    padding: 20px;
     font-size: 20px;
     font-weight: 800;
     text-align: center;
-    bottom: 30px;
+    @media (max-width: 600px) {
+      font-size: 18px;
+      font-weight: 700;
+    }
     &__s {
       bottom: auto;
       font-size: medium;
@@ -53,7 +56,7 @@
   }
 }
 .my-social {
-  padding: 32px;
+  padding: 15px;
   color: #fff;
   @media (max-width: 600px) {
     width: 80%;
@@ -63,6 +66,10 @@
     padding: 8px;
     &:hover {
       transform: scale(1.15);
+    }
+    @media (max-width: 600px) {
+      width: 55px;
+      padding: 6px;
     }
   }
 }
