--- a/src/components/CreateCourseStepOne/style.scss
+++ b/src/components/CreateCourseStepOne/style.scss
@@ -23,3 +23,48 @@
   position: relative;
   height: auto;
 }
+
+.step-one-button {
+  margin-top: 1.5rem !important;
+  margin-bottom: 1rem !important;
+}
+
+.step-one-datePicker {
+  border-radius: 5px;
+  border: 1px #0c8af8 solid;
+  padding: 4px 12px !important;
+  background-color: white;
+  height: 40px;
+  box-shadow: 0 0 2px #0074d9;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 16px;
+}
+
+.step-one-datePicker:focus {
+  outline: none;
+  border: 1px solid #0c8af8;
+  box-shadow: 0 0 10px 2px #0074d9;
+}
+
+.step-one-calender__label {
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 16px;
+}
+
+.step-one-text-area {
+  margin-top: 1.5rem !important;
+  width: 95% !important;
+}
+
+.MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.MuiInputBase-formControl.MuiInputBase-multiline.muirtl-l6hdvs-MuiInputBase-root-MuiOutlinedInput-root {
+  width: 100%;
+}
+
+// @media only screen and (max-width: 600px) {
+//   .step-one-input-field {
+//     margin-right: 10px !important;
+//     margin-left: 10px !important;
+//   }
+// }
