[feature]: Add course tags and register modal

--- a/src/components/CoursePage/style.scss
+++ b/src/components/CoursePage/style.scss
@@ -7,7 +7,7 @@
 
 .course-header {
   margin: 8px;
-  padding: 32px 16px;
+  padding: 32px 16px 16px;
   // border: 2px solid $c-gray-70;
   border-radius: 16px;
   display: flex;
@@ -61,7 +61,7 @@
   &__img {
     width: 100%;
     max-width: 400px;
-    height: 300px;
+    height: 250px;
     background-color: $c-gray-85;
     flex-shrink: 0;
     border-radius: 8px;
@@ -70,7 +70,7 @@
     img {
       width: 100%;
       max-width: 400px;
-      height: 300px;
+      height: 250px;
       border-radius: 8px;
     }
   }
@@ -89,6 +89,23 @@
     &__description {
       margin-left: 0;
     }
+  }
+}
+
+.course-tags {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 32px;
+
+  &__tag {
+    font-size: 14px;
+    font-weight: 500;
+    border: 1px solid rgba(253, 200, 64, 0.9);
+    color: rgb(88, 80, 55);
+    background-color: rgba(253, 200, 64, 0.3);
+    padding: 8px 16px;
+    margin: 4px;
+    border-radius: 24px;
   }
 }
 
