--- a/src/components/StudentProfile/style.scss
+++ b/src/components/StudentProfile/style.scss
@@ -22,6 +22,7 @@
     padding: 5px;
     border-radius: 2%;
     @media (max-width: 600px) {
+      width: 91%;
       flex-direction: column;
     }
 }
