[fix]: Student Dashboard Edition

--- a/src/components/SearchClasses/style.scss
+++ b/src/components/SearchClasses/style.scss
@@ -2,7 +2,7 @@
 .afterMyC-b{
   margin-top: 310px;
   text-align: center;
-  background-color: rgb(255, 230, 210);
-  min-height: 100vh;
+  box-shadow:rgba(216, 207, 30, 0.87) 0px 2px 5px;
+  background-color: #feffbe;
 };
 
