[fix]: Profile+MyClasses Edition

--- a/src/components/MyClasses/style.scss
+++ b/src/components/MyClasses/style.scss
@@ -160,6 +160,7 @@
         }
         color: brown;
         &__a{
+            color: brown;
             margin-inline-start: 25%;
             display: block;
             @media (max-width: 600px) {
