--- a/src/components/StudentProfile/style.scss
+++ b/src/components/StudentProfile/style.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: row;
   box-shadow: inset;
-  @media (max-width: 600px) {
+  @media (max-width: 800px) {
     flex-direction: column;
   }
 }
@@ -22,7 +22,7 @@
     background-color: rgb(255, 216, 211);
     padding: 5px;
     border-radius: 2%;
-    @media (max-width: 600px) {
+    @media (max-width: 800px) {
       width: 91%;
       flex-direction: column;
     }
@@ -30,4 +30,8 @@
 .RightBar{
   display: flex;
   flex-direction: column;
+  @media (max-width: 800px) {
+    width: 95%;
+    margin: auto;
+  }
 }
