--- a/src/components/StudentProfile/style.scss
+++ b/src/components/StudentProfile/style.scss
@@ -14,6 +14,7 @@
   }
 }
 .Forms{
+    text-align: center;
     display: flex;
     flex-direction: row;
     box-shadow:rgba(63, 2, 2, 0.87) 0px 2px 10px;
@@ -36,3 +37,4 @@
     margin: auto;
   }
 }
+.center{text-align: center;}
