--- a/src/components/StudentProfile/style.scss
+++ b/src/components/StudentProfile/style.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: row;
     box-shadow:rgba(63, 2, 2, 0.87) 0px 2px 10px;
-    width: 75%;
+    max-width: fit-content;
     margin: 20px;
     background-color: rgb(255, 216, 211);
     padding: 5px;
@@ -37,4 +37,3 @@
     margin: auto;
   }
 }
-.center{text-align: center;}
