--- a/src/components/StudentProfile/Pro/style.scss
+++ b/src/components/StudentProfile/Pro/style.scss
@@ -34,7 +34,7 @@
   flex-direction: row;
   box-shadow:rgba(0, 0, 0, 0.87) 0px 2px 10px;
   margin: 20px;
-  background-color: rgb(122, 0, 71);;
+  background-color: rgb(122, 0, 71);
   padding: 5px;
   border-radius: 4%;
   font-size: x-large;
