--- a/src/components/StudentProfile/style.scss
+++ b/src/components/StudentProfile/style.scss
@@ -18,7 +18,6 @@
     display: flex;
     flex-direction: row;
     box-shadow:rgba(63, 2, 2, 0.87) 0px 2px 10px;
-    max-width: fit-content;
     margin: 20px;
     background-color: rgb(255, 216, 211);
     padding: 5px;
@@ -35,5 +34,33 @@
   @media (max-width: 800px) {
     width: 95%;
     margin: auto;
+  }
+}
+.PB{
+  display: flex;
+  height: 70px;
+  flex-direction: row;
+  margin: 20px;
+  padding: 5px;
+  border-radius: 4%;
+  font-size: x-large;
+  font-weight: 700;
+  color:rgb(122, 0, 71);
+  &__media{
+      margin: auto;
+      width: 45px;
+      height: 45px;
+      text-align: left;
+      margin-inline-start: 15%;
+      border-radius: 10%;
+  }
+  &__content{
+      margin: auto;
+      text-align: center;
+      margin-inline-start: 1%;
+      border-radius: 10%;
+  }
+  @media (max-width: 800px) {
+    display: none;
   }
 }
