--- a/src/components/CreateCourseForm/style.scss
+++ b/src/components/CreateCourseForm/style.scss
@@ -17,10 +17,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
 }
 
 .steeper-button {
-  margin-bottom: 25px !important;
+  margin-bottom: 15px !important;
+  margin-right: 15px !important;
+  margin-left: 15px !important;
+  margin-top: 20px !important;
 }
 
 @media only screen and (max-width: 600px) {
