--- a/src/components/CreateCourseStepOne/style.scss
+++ b/src/components/CreateCourseStepOne/style.scss
@@ -30,15 +30,20 @@
 }
 
 .step-one-datePicker {
-  border-radius: 5px;
+  border-radius: 3px;
   border: 1px #0c8af8 solid;
   padding: 4px 12px !important;
   background-color: white;
-  height: 40px;
+  height: 50px;
   box-shadow: 0 0 2px #0074d9;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   font-size: 16px;
+  width: 100% !important;
+}
+
+.rmdp-container {
+  width: 100% !important;
 }
 
 .step-one-datePicker:focus {
@@ -48,23 +53,27 @@
 }
 
 .step-one-calender__label {
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   font-size: 16px;
 }
 
-.step-one-text-area {
-  margin-top: 1.5rem !important;
-  width: 95% !important;
-}
+// .step-one-image {
+//   width: 20vmin;
+//   height: 20vmin;
+// }
 
 .MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.MuiInputBase-formControl.MuiInputBase-multiline.muirtl-l6hdvs-MuiInputBase-root-MuiOutlinedInput-root {
   width: 100%;
 }
 
-// @media only screen and (max-width: 600px) {
-//   .step-one-input-field {
-//     margin-right: 10px !important;
-//     margin-left: 10px !important;
+.step-one-select-holder {
+  // width: 26rem;
+  // min-width: 26rem !important;
+}
+
+// @media only screen and (max-width: 800px) {
+//   .step-one-datePicker {
+//     width: 95% !important;
 //   }
 // }
