--- a/src/components/CourseDates/style.scss
+++ b/src/components/CourseDates/style.scss
@@ -84,10 +84,11 @@
   border-radius: 8px;
   width: 240px;
   height: 300px;
+  border: 2px solid rgb(37, 93, 173);
+  background-color: rgba(242, 247, 254, 0.5);
 
-  &:focus {
-    border: 2px solid rgb(37, 93, 173);
-    background-color: rgba(242, 247, 254, 0.5);
+  &__icon {
+    margin-bottom: 16px;
   }
 
   &__day {
@@ -100,12 +101,16 @@
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 16px;
+    color: #29a877;
+    color: rgb(37, 93, 173);
+
   }
 
   &__time {
     font-size: 18px;
     font-weight: 700;
     color: rgb(37, 93, 173);
+    color: rgb(241, 93, 93);
     margin-bottom: 24px;
   }
 
@@ -133,56 +138,3 @@
   }
 }
 
-.register-modal {
-  background-color: $c-white;
-  border-radius: 8px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
-  padding: 32px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: calc(100% - 32px);
-  max-width: 400px;
-  text-align: center;
-
-  &__title {
-    font-size: 20px;
-    margin-top: 16px;
-    margin-bottom: 32px;
-  }
-
-  &__confirm {
-    background-color: #29a877;
-    color: $c-white;
-    border: 1px solid rgba(37, 93, 173, 0.25);
-    padding: 8px 16px;
-    font-weight: 700;
-    border-radius: 4px;
-    box-shadow: 0 4px 10px rgba(41, 168, 119, 0.35);
-    font-size: 16px;
-    margin: 16px;
-    cursor: pointer;
-
-    &:hover {
-      background-color: #249468;
-    }
-  }
-
-  &__cancel {
-    background-color: #f15d5d;
-    color: $c-white;
-    border: 1px solid rgba(37, 93, 173, 0.25);
-    padding: 8px 16px;
-    font-weight: 700;
-    border-radius: 4px;
-    box-shadow: 0 4px 10px #f15d5d;
-    font-size: 16px;
-    margin: 16px;
-    cursor: pointer;
-
-    &:hover {
-      background-color: #df5555;
-    }
-  }
-}
