--- a/src/components/CreateCourseForm/style.scss
+++ b/src/components/CreateCourseForm/style.scss
@@ -8,10 +8,16 @@
   width: 70%;
   align-items: center;
   margin: auto;
-  margin-top: 40px;
+  margin-top: 64px;
+  margin-bottom: 64px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
   border-radius: 16px;
   padding: 8px;
+  padding-bottom: 32px;
+
+  @media (max-width: 768px) {
+    margin: 0;
+  }
 }
 
 .steeper-button__holder {
