--- a/src/components/CreateCourseStepOne/style.scss
+++ b/src/components/CreateCourseStepOne/style.scss
@@ -35,11 +35,15 @@
   padding: 4px 12px !important;
   height: 53px !important;
   margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0 !important;
   font-size: 16px;
   width: 100% !important;
   font-family: 'iranyekan' !important;
   box-shadow: none !important;
+
+  &.error {
+    border: 1px solid #D32F2F !important;
+  }
 }
 
 .rmdp-container {
@@ -70,6 +74,9 @@
 .step-one-select-holder {
   // width: 26rem;
   // min-width: 26rem !important;
+}
+.rmdp-time-picker input {
+  font-family: iranyekan !important;
 }
 
 // @media only screen and (max-width: 800px) {
