--- a/src/components/MyCalendar/JCal/Yearly/index.styles.scss
+++ b/src/components/MyCalendar/JCal/Yearly/index.styles.scss
@@ -10,6 +10,7 @@
   float: right;
   height: 300px;
   padding: 20px;
+  margin-bottom: 25px;
   box-sizing: border-box;
   width: calc(100% / 3);
   @media (max-width: 1200px) {
