--- a/src/components/MyClasses/style.scss
+++ b/src/components/MyClasses/style.scss
@@ -25,6 +25,9 @@
     flex-direction: row;
     text-align: center;
     margin-inline-start: 16%;
+    &:hover{
+        background-color: transparent;
+    }
     @media (max-width: 600px) {
         margin-inline-start: 1%;
     }
