[fix]: Teacher dashboard and create course  styles and apis

--- a/src/components/CreateCourseStepThree/style.scss
+++ b/src/components/CreateCourseStepThree/style.scss
@@ -13,3 +13,10 @@
 .step-two-dynamic-input-buttons {
   margin-top: 5px !important;
 }
+
+.create-loading {
+  height: 24px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
