[fix]: some styles

--- a/src/components/TeacherDashboard/style.scss
+++ b/src/components/TeacherDashboard/style.scss
@@ -35,7 +35,7 @@
 
   &__info-edit {
     color: rgba(238, 255, 0, 0.9);
-    font-size: 1.3vmin;
+    font-size: 12px;
     margin: 0 auto 10px auto !important;
     font-weight: bold;
   }
