[fix] change teacher classestable to card + fix teacher profile validation and image upload

--- a/src/components/DashboardteacherClasses/style.scss
+++ b/src/components/DashboardteacherClasses/style.scss
@@ -1,1 +1,14 @@
 @import '../../theme/main.scss';
+
+.card-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+
+.card-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
