--- a/src/components/ClassCalendar/style.scss
+++ b/src/components/ClassCalendar/style.scss
@@ -9,8 +9,9 @@
   margin-right: 40px;
   margin-bottom: 40px;
   text-align: center;
-  box-shadow:rgba(179, 173, 69, 0.87) 0px 2px 5px;
-  background-color: #feffd1;
+  box-shadow:rgba(179, 69, 69, 0.87) 0px 2px 5px;
+  background-color: #f74444;
+  /*background-color: #feffd1;*/
   overflow-y: auto;
 };
 .ccImg{
@@ -28,4 +29,35 @@
     margin-top: 348px;
   }
 }
-
+.FoxP{
+  &__s{
+    width: 55px;
+  }
+  &__a{
+    width: 60px;
+  }
+}
+.AcDiv{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.Text{
+  margin-right: 20px;
+  margin-top: 28px;
+  margin-bottom: 28px;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+}
+.Height{
+  height: 100px;
+}
+.rangi{
+  font-weight: 800;
+  border-radius: 1%;
+  border:#f74444;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 10px;
+  background-color: #fdd8c2;
+}
