--- a/src/components/StudentProfile/style.scss
+++ b/src/components/StudentProfile/style.scss
@@ -17,9 +17,7 @@
     text-align: center;
     display: flex;
     flex-direction: row;
-    box-shadow:rgba(63, 2, 2, 0.87) 0px 2px 10px;
     margin: 20px;
-    background-color: rgb(255, 216, 211);
     padding: 5px;
     border-radius: 2%;
     @media (max-width: 800px) {
@@ -45,7 +43,6 @@
   border-radius: 4%;
   font-size: x-large;
   font-weight: 700;
-  color:rgb(122, 0, 71);
   &__media{
       margin: auto;
       width: 45px;
@@ -63,4 +60,37 @@
   @media (max-width: 800px) {
     display: none;
   }
+}
+
+.Center{
+  text-align: center;
+  background-color:rgb(59, 231, 231);
+}
+.CenterB{
+  margin-right: 25px;
+  text-align: center;
+}
+.BG{
+  background-color:rgb(217, 255, 255);
+}
+.BlueC{
+  width: 110px;
+  padding: 5px;
+  margin: 5px;
+  background-color: cyan;
+  color: blue;
+}
+.PinkC{
+  width: 110px;
+  padding: 5px;
+  margin: 5px;
+  background-color: pink;
+  color: deeppink;
+}
+.PurpleC{
+  width: 110px;
+  padding: 5px;
+  margin: 5px;
+  background-color: plum;
+  color:indigo;
 }
