--- a/src/components/ClassCalendar/style.scss
+++ b/src/components/ClassCalendar/style.scss
@@ -36,12 +36,12 @@
   }
 }
 .FoxP{
-  &__s{
-    width: 55px;
-  }
-  &__a{
+    margin-top: 20px;
     width: 60px;
-  }
+    height: fit-content;
+    @media (max-width: 600px) {
+      margin-top: 30px;
+    }
 }
 .AcDiv{
   margin-top: 10px;
