--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -14,7 +14,8 @@ a {
 }
 
 body,
-button {
+button,
+input {
   font-family: iranyekan, sans-serif;
 }
 
@@ -44,5 +45,97 @@ $color-highlight: lighten($c-gray-95, 7%);
   }
   100% {
     transform: translate3d(100%, 0, 0);
+  }
+}
+
+.kp-text-input {
+  &__label {
+    margin-bottom: 8px;
+    display: block;
+  }
+
+  &__input,
+  &__textarea {
+    background-color: #eee;
+    color: #333;
+    padding: 12px 16px;
+    font-size: 14px;
+    border-radius: 6px;
+    border: none;
+    margin-bottom: 16px;
+    outline: none;
+
+    &::placeholder {
+      color: #ccc;
+    }
+  }
+
+  &__textarea {
+    height: 120px;
+    resize: none;
+  }
+}
+
+.success-btn {
+  background-color: #29a877;
+  color: $c-white;
+  border: 1px solid rgba(37, 93, 173, 0.25);
+  padding: 8px 16px;
+  font-weight: 700;
+  border-radius: 4px;
+  box-shadow: 0 4px 10px rgba(41, 168, 119, 0.35);
+  font-size: 16px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #249468;
+  }
+}
+
+.danger-btn {
+  background-color: #f15d5d;
+  color: $c-white;
+  border: 1px solid rgba(37, 93, 173, 0.25);
+  padding: 8px 16px;
+  font-weight: 700;
+  border-radius: 4px;
+  box-shadow: 0 4px 10px #f15d5d;
+  font-size: 16px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #df5555;
+  }
+}
+
+.info-btn {
+  background-color: rgb(37, 93, 173);
+  color: $c-white;
+  border: 1px solid rgba(37, 93, 173, 0.25);
+  padding: 8px 16px;
+  font-weight: 700;
+  border-radius: 4px;
+  box-shadow: 0 4px 10px rgba(37, 93, 173, 0.35);
+  font-size: 16px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgb(31, 79, 146);
+  }
+}
+
+.orange-btn {
+  background-color: rgb(255, 151, 109);
+  color: $c-white;
+  border: 1px solid rgba(255, 151, 109, 0.25);
+  padding: 8px 16px;
+  font-weight: 700;
+  border-radius: 4px;
+  box-shadow: 0 4px 10px rgba(255, 151, 109, 0.35);
+  font-size: 16px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgb(228, 132, 94);
   }
 }
