[fix] change jodit richtext to another one

--- a/src/components/DashboardTeacherAboutMe/style.scss
+++ b/src/components/DashboardTeacherAboutMe/style.scss
@@ -11,3 +11,12 @@
     padding: 20px;
     border-radius: 25px;
 }
+
+.editor-wrapper{
+    direction: ltr;
+    
+}
+
+.editor-main{
+    min-height: 50vmin !important;
+}
