--- a/src/components/DashboardteacherClasses/style.scss
+++ b/src/components/DashboardteacherClasses/style.scss
@@ -37,3 +37,9 @@
 .grid {
   box-shadow: rgba(0, 0, 0, 0.6) 0px 2px 8px !important;
 }
+
+
+.card-media-image{
+  /* object-fit: contain !important; */
+  width: 100% !important;
+}
