--- a/src/components/BaseAssignments/style.scss
+++ b/src/components/BaseAssignments/style.scss
@@ -105,13 +105,47 @@
   }
   .editor{
     background-color: rgb(203, 217, 255);
-    min-height: 270px;
-    max-height: max-content;
+    height: 220px;
+    overflow-y: auto;
     border-radius: 1%;
     margin-bottom: 20px;
+    padding: 15px;
+    border-style: dotted;
+    border-color:darkslateblue;
   }
   .mytxt{
     font-size: large;
     font-weight: 800;
     color: rgb(65, 0, 126);
+  }
+  .Bt{
+    width: max-content;
+    height: 60px;
+    padding: 10px;
+    margin-top: 3px;
+    margin-right: 90%;
+    border-radius: 10%;
+    background-color: rgb(181, 200, 253);
+    border-style: dotted;
+    border-color:darkslateblue;
+    @media (max-width: 1400px) {
+      margin-right: 86%;
+    }
+    @media (max-width: 1200px) {
+      margin-right: 84%;
+    }
+    @media (max-width: 1000px) {
+      margin-right: 82%;
+    }
+    @media (max-width: 800px) {
+      margin-right: 80%;
+    }
+    @media (max-width: 600px) {
+      margin-right: 78%;
+    }
+    &__txt{
+      font-size: medium;
+      font-weight: 800;
+      color: #3b0618;
+    }
   }
