--- a/src/components/StudentAssignments/style.scss
+++ b/src/components/StudentAssignments/style.scss
@@ -7,9 +7,12 @@
     padding: 15px;
     background-color: rgb(98, 92, 150);
     margin-top: 20px;
+    margin-bottom: auto;
     height: fit-content;
     @media (max-width: 800px) {
       width: 90%;
+      margin: auto;
+      margin-top: 10px;
     }
 }
 .HeadImg{
@@ -92,7 +95,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBo
       margin: 20px;
       background-color: rgb(170, 252, 255);
       padding: 25px;
-      border-radius: 10%;
+      border-radius: 4%;
       text-align: center;
       font-size: x-large;
       font-weight: 700;
@@ -102,13 +105,21 @@ background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBo
           margin: 5px;
           border-radius: 10%;
       }
+      @media (max-width: 800px)
+      {
+        width: 90%;
+        margin: auto;
+        margin-bottom: 10px;
+      }
   }
 }
 .mymain{
   display: flex;
   flex-direction: row;
   margin-top: 80px;
+  margin-bottom: 10px;
   @media (max-width: 800px) {
     flex-direction: column;
+    margin-bottom: 20px;
   }
 }
