--- a/src/components/CreateCourseStepOne/style.scss
+++ b/src/components/CreateCourseStepOne/style.scss
@@ -1,5 +1,9 @@
 @import '/src/theme/main.scss';
 
+.hidden-date-picker {
+  display: none;
+}
+
 .step-one-title {
   align-items: center !important;
 }
