--- a/src/components/CreateAssignment/style.scss
+++ b/src/components/CreateAssignment/style.scss
@@ -66,3 +66,13 @@
     }
   }
 }
+
+.rich-text-toolbar-class {
+  direction: ltr;
+}
+
+.rich-text-editor-class {
+  background-color: #eee;
+  min-height: 240px;
+  padding: 8px 16px;
+}
