--- a/src/components/BaseAssignments/style.scss
+++ b/src/components/BaseAssignments/style.scss
@@ -105,8 +105,7 @@
   }
   .editor{
     background-color: rgb(203, 217, 255);
-    height: 220px;
-    overflow-y: auto;
+    // height: 220px;
     border-radius: 1%;
     margin-bottom: 20px;
     padding: 15px;
