--- a/src/components/StudentProfileCard/style.scss
+++ b/src/components/StudentProfileCard/style.scss
@@ -10,7 +10,7 @@
 .student-profile-card-container {
   width: 300px;
   height: 500px;
-  box-shadow: 1px 1px 10px 2px black;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
 
