[fix]: PickFavoriteColor for pofile

--- a/src/components/StudentProfile/Pro/style.scss
+++ b/src/components/StudentProfile/Pro/style.scss
@@ -14,7 +14,7 @@
   &__Hello{
       margin: 20px;
       padding: 5px;
-      border-radius: 10%;
+      border-radius: 8px;
       text-align: center;
       font-size: x-large;
       font-weight: 700;
@@ -31,7 +31,7 @@
   flex-direction: row;
   margin: 20px;
   padding: 5px;
-  border-radius: 4%;
+  border-radius: 7px;
   font-size: x-large;
   font-weight: 700;
   &__media{
