[fix]: create and edit assignments

--- a/src/components/Assignments/style.scss
+++ b/src/components/Assignments/style.scss
@@ -116,7 +116,8 @@
     }
 
     .info-btn,
-    .orange-btn {
+    .orange-btn,
+    .pink-btn {
       margin-bottom: 8px;
       margin-left: 0;
     }
