--- a/src/components/TeacherPublicProfile/style.scss
+++ b/src/components/TeacherPublicProfile/style.scss
@@ -18,6 +18,7 @@
     border: 3px solid rgb(25, 114, 129);
     padding: 20px;
     border-radius: 25px;
+    min-height: 200px !important;
 }
 
 .afterMyC-a{
