--- a/src/components/MyClasses/style.scss
+++ b/src/components/MyClasses/style.scss
@@ -131,7 +131,7 @@
         font-size: large;
         font-weight: 800;
         color: rgb(255, 51, 0);
-        background-color:rgb(251, 255, 0);
+        background-color:#DBD776;
         &:hover {
             margin-top: 0px;
             height: 56px;
