[feat] add student modal profile

--- a/src/components/ClassStudentsInfo/style.scss
+++ b/src/components/ClassStudentsInfo/style.scss
@@ -25,6 +25,10 @@
   //   padding: 10px !important;
 }
 
+.course-student-info-table__image-holder:hover {
+  cursor: pointer;
+}
+
 td.MuiTableCell-root.MuiTableCell-body.MuiTableCell-alignCenter.MuiTableCell-sizeMedium.course-student-info-table__image-holder.muirtl-1ozjs9z-MuiTableCell-root {
   display: flex;
   justify-content: center;
