--- a/src/components/StudentProfile/style.scss
+++ b/src/components/StudentProfile/style.scss
@@ -38,7 +38,7 @@
   display: flex;
   height: 70px;
   flex-direction: row;
-  margin: 20px;
+  margin: auto;
   padding: 5px;
   border-radius: 4%;
   font-size: x-large;
@@ -58,9 +58,6 @@
       text-align: center;
       border-radius: 10%;
   }
-  //@media (max-width: 800px) {
-   // display: none;
-  //}
 }
 
 .Center{
