--- a/src/components/TeacherPublicProfile/style.scss
+++ b/src/components/TeacherPublicProfile/style.scss
@@ -16,7 +16,7 @@
 .abut-me_wrapper{
     box-shadow:rgba(0, 0, 0, 0.60) 0px 2px 8px !important;
     border: 3px solid rgb(25, 114, 129);
-    padding: 20px;
+    padding: 20px 40px;
     border-radius: 25px;
     min-height: 200px !important;
 }
