[chore] minor changes

--- a/src/components/EmailVerification/style.scss
+++ b/src/components/EmailVerification/style.scss
@@ -1,12 +1,12 @@
 @import '/src/theme/main.scss';
 
-.container {
+.email-verification-container {
   height: 50px;
 
   width: 300px;
 }
 
-.character {
+.email-verification-character {
   line-height: 50px;
 
   font-size: 36px;
