--- a/src/components/DashboardteacherClasses/style.scss
+++ b/src/components/DashboardteacherClasses/style.scss
@@ -43,3 +43,11 @@
   /* object-fit: contain !important; */
   width: 100% !important;
 }
+
+.course-title
+{
+  font-size: 24px !important;
+  font-weight: 800 !important;
+  color: $c-black m !important;
+  
+}
