[fix]: loader and class atendees

--- a/src/components/CoursePage/style.scss
+++ b/src/components/CoursePage/style.scss
@@ -290,3 +290,10 @@
     }
   }
 }
+
+.api-loader {
+  height: 24px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
