--- a/src/components/CoursePage/style.scss
+++ b/src/components/CoursePage/style.scss
@@ -23,10 +23,10 @@
   }
 
   &__title {
-    font-size: 24px;
-    font-weight: 700;
-    margin-top: 16px;
-    margin-bottom: 8px;
+    font-size: 24px !important;
+    font-weight: 700 !important;
+    margin-top: 16px !important;
+    margin-bottom: 8px !important;
   }
 
   &__rating {
