[fix]: add navbar to NotFoundPage

--- a/src/components/NotFoundPage/style.scss
+++ b/src/components/NotFoundPage/style.scss
@@ -17,6 +17,7 @@
   border-radius: 4%;
   background-color: rgb(207, 198, 245);
   margin: 16px;
+  margin-top: 63px;
   text-align: center;
   width: 50%;
   box-shadow: rgba(1, 21, 22, 0.5) 0px 2px 10px;
