[fix]: fix minor css issues and change server url

--- a/src/components/StudentProfile/style.scss
+++ b/src/components/StudentProfile/style.scss
@@ -13,7 +13,9 @@
   @media (max-width: 800px) {
     flex-direction: column;
   }
-  margin: 30px;
+  margin: 0px 30px 30px;
+
+
 }
 
 .CenterB {
@@ -93,6 +95,7 @@
   }
 
   &__Hello {
+    height: 440px;
     padding: 5px;
     border-radius: 8px;
     text-align: center;
